<package>
  <name>robot_teleop</name>
  <version>2.3.12</version>
  <description>Provides teleoperation using joysticks.</description>
  <maintainer email="xxx@xxx.com">xxxx</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org</url>
  <url type="repository">https://github.com</url>
  <url type="bugtracker">https://github.com</url>
  <author email="xxx@xxx.com">xxx</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
